fix: align logs to bottom

--- a/src/js/console/style.less
+++ b/src/js/console/style.less
@@ -15,7 +15,7 @@ main {
     
     display: flex;
     flex-direction: column;
-    align-items: end;
+    justify-content: end;
     overflow-y: scroll;
     overflow-x: hidden;
 
